kubernetes/base/configmap.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vortexmesh
  labels:
    name: vortexmesh
